# ArtixCMake

./: CMakeLists.txt  README.md  test.bat  Скрипт для Linux.txt
src/: CarFactory.cpp  CarFactory.h  vehicleFactory.cpp  vehicleFactory.h  vehicles.cpp
